unpackaged/main/default/objects/Contact/fields/Jay_Test_2__c.field-meta.xml
<CustomField>
    <fullName>Jay_Test_2__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Jay Test 2</label>
    <type>AutoNumber</type>
</CustomField>