unpackaged/main/default/objects/Contact/fields/Jay_Test__c.field-meta.xml
<CustomField>
    <fullName>Jay_Test__c</fullName>
    <label>Jay Test</label>
    <length>30</length>
    <type>Text</type>
</CustomField>