unpackaged/main/default/objects/Contact/fields/Sheik__c.field-meta.xml
<CustomField>
    <fullName>Sheik__c</fullName>
    <label>Sheik</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>