unpackaged/main/default/objects/Contact/recordTypes/Sheik3.recordType-meta.xml
<RecordType>
    <fullName>Sheik3</fullName>
    <active>true</active>
    <label>Sheik3</label>
</RecordType>